# any

./: .gitignore  CMakeLists.txt  main.cpp
include/eld/any/: any.hpp
